# mdsl

./: .gitignore  Makefile.am  README.md  configure.ac
data/: Makefile.am  mdsl.pc.in
mdsl/: Makefile.am  arrays.c  arrays.h  dict.c  dict.h  event.c  event.h  incl.h  mdsl.h  private.h  utils.c  utils.h
tests/: Makefile.am  arrays.c  dict.c  event.c  logcc.sh.in  private.c
